# life-cpp

./: CMakeLists.txt  readme.org
src/: camera.cpp  camera.hpp  cell.hpp  grid.cpp  grid.hpp  life.cpp  log.hpp  main.cpp  opengl.hpp  shader.cpp  shader.hpp
